--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "bundle": "yarn webpack --mode production",
     "bundle-dev": "yarn webpack --mode development",
-    "clean": "rm -rf build dist"
+    "clean": "rm -rf build dist",
+    "lint": "yarn eslint --max-warnings=0 --ext .ts src"
   },
   "browserslist": {
     "production": [
@@ -33,5 +34,10 @@
     "typescript-declaration-webpack-plugin": "^0.2.2",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.23.0",
+    "@typescript-eslint/parser": "^5.23.0",
+    "eslint": "^8.15.0"
   }
 }
