--- a/demo-client/package.json
+++ b/demo-client/package.json
@@ -9,6 +9,7 @@
     "bundle": "(cd ../client && yarn bundle) && yarn webpack --mode production",
     "bundle-dev": "(cd ../client && yarn bundle-dev) && yarn webpack --mode development",
     "clean": "rm -rf build dist",
+    "lint": "yarn eslint --max-warnings=0 --ext .ts .",
     "start": "yarn bundle-dev && python -m http.server -d dist"
   },
   "dependencies": {
@@ -20,5 +21,10 @@
     "typescript": "^4.6.4",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.23.0",
+    "@typescript-eslint/parser": "^5.23.0",
+    "eslint": "^8.15.0"
   }
 }
