--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,2 +1,8 @@
 # Shim provided by NodeJS to download the version of yarn specified by the packageManager field in package.json.
 yarnPath: /usr/lib/node_modules/corepack/dist/yarn.js
+
+# Making ts-patch work without node_modules is difficult. https://github.com/nonara/ts-patch/issues/60
+nodeLinker: node-modules
+
+# We need this to be able to remove node_modules/@types/node from browser workspaces' node_modules.
+nmHoistingLimits: workspaces
