--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./build"
+    "outDir": "./build",
+    "plugins": [
+      { "transform": "@ckitching/typescript-is/lib/transform-inline/transformer" }
+    ]
   },
   "include": ["./src/*.ts"]
 }
