--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,8 @@
   "main": "dist/live-video-streamer-server.js",
   "version": "0.0.0",
   "scripts": {
-    "bundle": "yarn webpack --mode production",
-    "bundle-dev": "yarn webpack --mode development",
+    "bundle": "ts-patch install && yarn webpack --mode production",
+    "bundle-dev": "ts-patch install && yarn webpack --mode development",
     "clean": "rm -rf build dist",
     "lint": "yarn eslint --max-warnings=0 --ext .ts src",
     "start": "yarn bundle-dev && yarn node dist/live-video-streamer-server.js $@"
@@ -19,6 +19,7 @@
     "babel-loader": "^8.2.5",
     "http-status-codes": "^2.2.0",
     "ts-loader": "^9.3.0",
+    "ts-patch": "^2.0.1",
     "typescript": "^4.6.4",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2"
