--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "@babel/core": "^7.17.10",
     "@babel/preset-env": "^7.17.10",
     "babel-loader": "^8.2.5",
+    "node-polyfill-webpack-plugin": "^1.1.4",
     "ts-loader": "^9.3.0",
     "ts-patch": "^2.0.1",
     "typescript": "^4.6.4",
