--- a/server/package.json
+++ b/server/package.json
@@ -15,12 +15,14 @@
   },
   "dependencies": {
     "@babel/core": "^7.17.10",
+    "@ckitching/typescript-is": "^0.1.21",
     "@types/node": "^17.0.34",
     "babel-loader": "^8.2.5",
     "http-status-codes": "^2.2.0",
     "ts-loader": "^9.3.0",
     "ts-patch": "^2.0.1",
     "typescript": "^4.6.4",
+    "typescript-is": "^0.19.0",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2"
   },
