--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "server"
   ],
   "scripts": {
+    "clean": "yarn foreach clean && rm -rf node_modules .yarn */node_modules",
     "foreach": "(cd common && yarn $@) && (cd client && yarn $@) && (cd demo-client && yarn $@) && (cd server && yarn $@)"
   },
   "packageManager": "yarn@3.2.0",
