--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,9 @@
     "bundle": "(cd ../common && yarn tsc) && ts-patch install && yarn webpack --mode production",
     "bundle-dev": "(cd ../common && yarn tsc) && ts-patch install && yarn webpack --mode development",
     "clean": "rm -rf build dist",
-    "lint": "yarn eslint --max-warnings=0 --ext .ts src",
-    "start": "yarn bundle-dev && yarn node dist/live-video-streamer-server.js $@"
+    "lint": "yarn eslint --max-warnings=0 --ext .ts src test",
+    "start": "yarn bundle-dev && yarn node dist/live-video-streamer-server.js $@",
+    "test": "ts-patch install && jest --config test/jest.config.js $@"
   },
   "dependencies": {
     "@babel/core": "^7.17.10",
@@ -28,8 +29,11 @@
     "webpack-cli": "^4.9.2"
   },
   "devDependencies": {
+    "@types/jest": "^27.5.1",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
-    "eslint": "^8.15.0"
+    "eslint": "^8.15.0",
+    "jest": "^28.1.0",
+    "ts-jest": "^28.0.2"
   }
 }
