--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.17.10",
+    "@babel/plugin-transform-runtime": "^7.18.0",
     "@babel/preset-env": "^7.17.10",
     "@ckitching/typescript-is": "^0.1.21",
     "babel-loader": "^8.2.5",
