[Build] Exclude node_modules
This isn't important for the build process (at the moment, at
least), but does help other tools.

--- a/common/tsconfig.json
+++ b/common/tsconfig.json
@@ -4,5 +4,6 @@
     "outDir": "./build",
     "allowJs": true
   },
-  "include": ["./src/*.ts"]
+  "include": ["./src/*.ts"],
+  "exclude": ["node_modules"]
 }
