--- a/demo-client/tsconfig.json
+++ b/demo-client/tsconfig.json
@@ -3,5 +3,6 @@
   "compilerOptions": {
     "outDir": "./build"
   },
-  "include": ["*.ts"]
+  "include": ["*.ts"],
+  "exclude": ["node_modules"]
 }
