--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -9,6 +9,6 @@
       { "transform": "@ckitching/typescript-is/lib/transform-inline/transformer" }
     ]
   },
-  "include": ["./src/*.ts"],
+  "include": ["./src/**/*.ts"],
   "exclude": ["node_modules"]
 }
