--- a/common/tsconfig.json
+++ b/common/tsconfig.json
@@ -6,6 +6,6 @@
     "types": ["node"],
     "allowJs": true
   },
-  "include": ["./src/*.ts"],
+  "include": ["./src/**/*.ts"],
   "exclude": ["node_modules"]
 }
