--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -11,6 +11,6 @@
       { "transform": "@ckitching/typescript-is/lib/transform-inline/transformer" }
     ]
   },
-  "include": ["./src/*.ts"],
+  "include": ["./src/**/*.ts"],
   "exclude": ["node_modules"]
 }
