[Build] Tigher control over globally included types
It turns out that the `types` array controls what gets into the
global scope automatically, rather than what's available to be
imported. I should have read the documentaiton more carefully the
first time.

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -2,6 +2,8 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "./build",
+    "lib": ["ESNext", "DOM"],
+    "types": [],
     "allowJs": true,
     "plugins": [
       { "transform": "@ckitching/typescript-is/lib/transform-inline/transformer" }
