--- a/demo-client/tsconfig.json
+++ b/demo-client/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./build"
+    "outDir": "./build",
+    "lib": ["ESNext", "DOM"],
+    "types": []
   },
   "include": ["*.ts"],
   "exclude": ["node_modules"]
