--- a/common/tsconfig.json
+++ b/common/tsconfig.json
@@ -2,6 +2,8 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "./build",
+    "lib": ["ESNext"],
+    "types": ["node"],
     "allowJs": true
   },
   "include": ["./src/*.ts"],
