--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "outDir": "./build",
     "module": "commonjs",
+    "lib": ["ESNext"],
+    "types": ["node"],
     "allowJs": true,
     "plugins": [
       { "transform": "typescript-is/lib/transform-inline/transformer" },
