--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,8 @@
   "types": "dist/live-video-streamer-client.d.ts",
   "version": "0.0.0",
   "scripts": {
-    "bundle": "(cd ../common && yarn tsc) && ts-patch install && yarn webpack --mode production",
-    "bundle-dev": "(cd ../common && yarn tsc) && ts-patch install && yarn webpack --mode development",
+    "bundle": "(cd ../common && yarn tsc) && ts-patch install && yarn webpack --mode production \"$@\"",
+    "bundle-dev": "(cd ../common && yarn tsc) && ts-patch install && yarn webpack --mode development \"$@\"",
     "clean": "rm -rf build dist",
     "lint": "yarn eslint --max-warnings=0 --ext .ts src test",
     "test": "ts-patch install && jest --config test/jest.config.js \"$@\""
