--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,8 @@
   "main": "dist/live-video-streamer-server.js",
   "version": "0.0.0",
   "scripts": {
-    "bundle": "(cd ../common && yarn tsc) && ts-patch install && yarn webpack --mode production",
-    "bundle-dev": "(cd ../common && yarn tsc) && ts-patch install && yarn webpack --mode development",
+    "bundle": "(cd ../common && yarn tsc) && ts-patch install && yarn webpack --mode production \"$@\"",
+    "bundle-dev": "(cd ../common && yarn tsc) && ts-patch install && yarn webpack --mode development \"$@\"",
     "clean": "rm -rf build dist",
     "lint": "yarn eslint --max-warnings=0 --ext .ts src test",
     "start": "yarn bundle-dev && yarn node dist/live-video-streamer-server.js \"$@\"",
