--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     "bundle-dev": "(cd ../common && yarn tsc) && ts-patch install && yarn webpack --mode development",
     "clean": "rm -rf build dist",
     "lint": "yarn eslint --max-warnings=0 --ext .ts src test",
-    "test": "ts-patch install && jest --config test/jest.config.js $@"
+    "test": "ts-patch install && jest --config test/jest.config.js \"$@\""
   },
   "browserslist": {
     "production": [
