--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "bundle-dev": "(cd server && yarn bundle-dev) && (cd client && yarn bundle-dev) && (cd demo-client && yarn bundle-dev)",
     "clean": "rm -rf docs/dist && yarn foreach clean && rm -rf node_modules .yarn */node_modules",
     "docs": "rm -rf docs/dist && docs/build.sh docs/dist",
-    "foreach": "(cd common && yarn $@) && (cd client && yarn $@) && (cd demo-client && yarn $@) && (cd server && yarn $@)",
+    "foreach": "(cd common && yarn \"$@\") && (cd client && yarn \"$@\") && (cd demo-client && yarn \"$@\") && (cd server && yarn \"$@\")",
     "test": "(cd common && yarn test) && (cd server && yarn test) && (cd client && yarn test)"
   },
   "packageManager": "yarn@3.2.0",
