--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,8 @@
     "bundle-dev": "(cd ../common && yarn tsc) && ts-patch install && yarn webpack --mode development",
     "clean": "rm -rf build dist",
     "lint": "yarn eslint --max-warnings=0 --ext .ts src test",
-    "start": "yarn bundle-dev && yarn node dist/live-video-streamer-server.js $@",
-    "test": "ts-patch install && jest --config test/jest.config.js $@"
+    "start": "yarn bundle-dev && yarn node dist/live-video-streamer-server.js \"$@\"",
+    "test": "ts-patch install && jest --config test/jest.config.js \"$@\""
   },
   "dependencies": {
     "@babel/core": "^7.17.10",
