--- a/demo-client/package.json
+++ b/demo-client/package.json
@@ -11,7 +11,7 @@
     "clean": "rm -rf build dist",
     "lint": "yarn eslint --max-warnings=0 --ext .ts .",
     "postinstall": "rm -rf node_modules/@types/node",
-    "start": "yarn bundle-dev && python -m http.server -d dist"
+    "start": "yarn bundle-dev \"$@\" && python -m http.server -d dist"
   },
   "dependencies": {
     "@babel/core": "^7.17.10",
