[Demo-Client] Add browserslist entry in package.json

--- a/demo-client/package.json
+++ b/demo-client/package.json
@@ -13,6 +13,18 @@
     "postinstall": "rm -rf node_modules/@types/node",
     "start": "yarn bundle-dev \"$@\" && python -m http.server -d dist"
   },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "dependencies": {
     "@babel/core": "^7.17.10",
     "babel-loader": "^8.2.5",
