Add a simple packaging system
The idea is to make it easier for us to reliably see what should be
distrubuted.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,6 +52,15 @@ Build-Production:
   variables:
     GIT_STRATEGY: none
 
+Package:
+  extends: .env
+  stage: Build-Production
+  script:
+    - run "cd src && yarn package"
+    - run "cd src && find | grep -F spectral-video-streamer-" # Check we got the package.
+  variables:
+    GIT_STRATEGY: none
+
 Manual:
   extends: .env
   stage: Deploy
