--- a/settings-ui/tsconfig.json
+++ b/settings-ui/tsconfig.json
@@ -7,6 +7,7 @@
       "esnext"
     ],
     "allowJs": true,
+    "composite": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
@@ -18,9 +19,22 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "plugins": [
+      {
+        "transform": "@ckitching/typescript-is/lib/transform-inline/transformer",
+        "ignoreMethods": true
+      }
+    ]
   },
   "include": [
-    "src"
+    "./src/**/*.ts",
+    "./src/**/*.tsx",
+    "./src/**/*.json",
+  ],
+  "references": [
+    {
+      "path": "../common"
+    }
   ]
 }
