Remove VERBATIM because xcmake adds it

--- a/js/CMakeLists.txt
+++ b/js/CMakeLists.txt
@@ -45,8 +45,7 @@ foreach (F IN LISTS JS_SRC)
                        COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_LIST_DIR}/${F}"
                                                         "${CMAKE_CURRENT_BINARY_DIR}/${F}"
                        MAIN_DEPENDENCY "${CMAKE_CURRENT_LIST_DIR}/${F}"
-                       COMMENT "Copying ${F} for out-of-tree JS build."
-                       VERBATIM)
+                       COMMENT "Copying ${F} for out-of-tree JS build.")
 
     # Add the copy to the list of dependencies, so if it changes, the JS targets below get re-run.
     list(APPEND JS_COPY_DEPS "${CMAKE_CURRENT_BINARY_DIR}/${F}")
@@ -59,8 +58,7 @@ add_custom_command(OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/js_yarn_install"
                    COMMAND yarn install
                    DEPENDS "${JS_COPY_DEPS}"
                    WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}"
-                   COMMENT "Installing Javascript dependencies."
-                   VERBATIM)
+                   COMMENT "Installing Javascript dependencies.")
 add_custom_target(js_yarn_install ALL DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/js_yarn_install")
 
 # Build the projects.
@@ -69,8 +67,7 @@ add_custom_command(OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/js_yarn_bundle"
                    COMMAND yarn "$<IF:$<BOOL:JS_DEV>,bundle-dev,bundle>"
                    DEPENDS js_yarn_install "${JS_COPY_DEPS}"
                    WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}"
-                   COMMENT "Building Javascript projects."
-                   VERBATIM)
+                   COMMENT "Building Javascript projects.")
 add_custom_target(js_yarn_bundle ALL DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/js_yarn_bundle")
 
 # Install the things we just built.
@@ -91,8 +88,7 @@ add_custom_command(OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/js_yarn_foreach_lint"
                    COMMAND yarn foreach lint
                    DEPENDS js_yarn_bundle "${JS_COPY_DEPS}"
                    WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}"
-                   COMMENT "Running Javascript linter."
-                   VERBATIM)
+                   COMMENT "Running Javascript linter.")
 add_custom_target(js_yarn_foreach_lint ALL DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/js_yarn_foreach_lint")
 
 # Create the Javascript test script in the install directory. This really just serves to make it easy to find what to
