Hit the JS buildsystem with a stick for a while
In no particular order:
- It isn't incorrect for @types/node to be present in builds for
  the browser: it correctly models various compile-time entities
  like process.env. The solution certainly isn't to `rm` things in
  node_modules in a postinstall script (which makes yarn always
  be out of sync), or to set `types: []` in tsconfig.json (despite
  what Some Guy on StackOverflow says) - since that disables all
  library type checking.
  Use `window.blah` to refer to window-globals unambiguously
  compared to their nodejs counterparts. This will always work.
  Other magical solutions exist if you have code that needs
  to compile on both nodejs and browser: but this isn't that.
- Use typescript project references
- Use `yarn workspaces foreach`
- Compile things according to their dependency trees, instead of
  using shell scripts to invoke `yarn bundle` on everything in
  order. There's a package manager, y'know
- Make typescript transformers work everywhere, including in the
  CRA subprojects.
- Prolog support

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,8 +1,11 @@
-# Shim provided by NodeJS to download the version of yarn specified by the packageManager field in package.json.
-yarnPath: /usr/lib/node_modules/corepack/dist/yarn.js
+nmHoistingLimits: workspaces
 
-# Making ts-patch work without node_modules is difficult. https://github.com/nonara/ts-patch/issues/60
 nodeLinker: node-modules
 
-# We need this to be able to remove node_modules/@types/node from browser workspaces' node_modules.
-nmHoistingLimits: workspaces
+plugins:
+  - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
+    spec: "@yarnpkg/plugin-workspace-tools"
+  - path: .yarn/plugins/@yarnpkg/plugin-constraints.cjs
+    spec: "@yarnpkg/plugin-constraints"
+
+yarnPath: /usr/lib/node_modules/corepack/dist/yarn.js
