--- a/settings-ui/package.json
+++ b/settings-ui/package.json
@@ -24,14 +24,15 @@
     "react-i18next": "^12.2.0",
     "react-scripts": "5.0.1",
     "ts-loader": "^9.4.2",
-    "typescript": "^4.4.2",
+    "ts-patch": "^2.1.0",
+    "typescript": "=4.7.3",
     "util": "^0.12.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "../cra-build-helper.sh start \"$@\"",
+    "bundle": "GENERATE_SOURCEMAP=false ../cra-build-helper.sh build \"$@\"",
+    "bundle-dev": "../cra-build-helper.sh build \"$@\"",
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": [
