--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,8 @@
   "types": "dist/live-video-streamer-client.d.ts",
   "version": "0.0.0",
   "scripts": {
-    "bundle": "(cd ../common && yarn tsc) && ts-patch install && yarn webpack --mode production \"$@\"",
-    "bundle-dev": "(cd ../common && yarn tsc) && ts-patch install && yarn webpack --mode development \"$@\"",
+    "bundle": "ts-patch install -s && yarn webpack --bail --mode=production \"$@\"",
+    "bundle-dev": "ts-patch install -s && yarn webpack --bail --mode=development \"$@\"",
     "clean": "rm -rf build dist",
     "lint": "yarn eslint --max-warnings=0 --ext .ts src test",
     "test": "yarn jest --clearCache && ts-patch install && jest --config test/jest.config.js \"$@\""
@@ -33,11 +33,11 @@
     "@ckitching/typescript-is": "^0.1.21",
     "babel-loader": "^8.2.5",
     "live-video-streamer-common": "workspace:^",
-    "node-polyfill-webpack-plugin": "^1.1.4",
     "ts-loader": "^9.3.0",
     "ts-patch": "^2.0.1",
-    "typescript": "^4.6.4",
+    "typescript": "=4.7.3",
     "typescript-declaration-webpack-plugin": "^0.2.2",
+    "util": "^0.12.5",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
   },
