--- a/common/package.json
+++ b/common/package.json
@@ -22,6 +22,7 @@
     "@typescript-eslint/parser": "^5.23.0",
     "eslint": "^8.15.0",
     "jest": "^28.1.0",
-    "ts-jest": "^28.0.2"
+    "ts-jest": "^28.0.2",
+    "typescript": "=4.7.3"
   }
 }
