--- a/settings-ui/tsconfig.json
+++ b/settings-ui/tsconfig.json
@@ -1,29 +1,15 @@
 {
+  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "target": "es5",
     "lib": [
       "dom",
       "dom.iterable",
       "esnext"
     ],
-    "allowJs": true,
-    "composite": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
     "jsx": "react-jsx",
     "plugins": [
       {
-        "transform": "@ckitching/typescript-is/lib/transform-inline/transformer",
-        "ignoreMethods": true
+        "transform": "@ckitching/typescript-is/lib/transform-inline/transformer"
       }
     ]
   },
