--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,37 @@
 {
   "compilerOptions": {
-    "sourceMap": true,
-    "declaration": true,
-    "composite": true,
-
-    "target": "ESNext",
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-
     "strict": true,
     "noFallthroughCasesInSwitch": true,
-    "noImplicitOverride": true,
-    "noImplicitReturns": true,
     "noPropertyAccessFromIndexSignature": true,
-    "noUncheckedIndexedAccess": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "forceConsistentCasingInFileNames": true
-  }
+    "noImplicitReturns": true,
+    "noImplicitOverride": true,
+    "noUncheckedIndexedAccess": true,
+    "exactOptionalPropertyTypes": false,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "forceConsistentCasingInFileNames": true,
+    "esModuleInterop": true,
+    "isolatedModules": true,
+    "importsNotUsedAsValues": "remove",
+    "preserveValueImports": false,
+    "moduleResolution": "node",
+    "resolveJsonModule": true
+  },
+  "files": [],
+  "references": [
+    {
+      "path": "client"
+    },
+    {
+      "path": "demo-client"
+    },
+    {
+      "path": "dev-client"
+    },
+    {
+      "path": "settings-ui"
+    }
+  ]
 }
