--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "bundle": "yarn workspaces foreach -p run bundle",
     "bundle-dev": "yarn workspaces foreach -p run bundle-dev",
+    "lint": "yarn workspaces foreach -p run lint",
     "clean": "yarn workspaces foreach -p run clean",
     "docs": "rm -rf docs/dist && docs/build.sh docs/dist",
     "test": "(cd common && yarn test) && (cd client && yarn test)"
@@ -22,8 +23,8 @@
   "packageManager": "yarn@3.2.0",
   "devDependencies": {
     "ts-patch": "^2.0.1",
-    "typedoc": "^0.22.15",
-    "typedoc-plugin-markdown": "^3.12.1",
+    "typedoc": "^0.23.28",
+    "typedoc-plugin-markdown": "^3.14.0",
     "typescript": "=4.7.3"
   }
 }
