Disable linting from cmake js builds for now
In most cases this gets run anyway by the buildsystem in JS-land,
so this was redunant.

--- a/demo-client/package.json
+++ b/demo-client/package.json
@@ -9,7 +9,7 @@
     "bundle": "GENERATE_SOURCEMAP=false ../cra-build-helper.sh build \"$@\"",
     "bundle-dev": "../cra-build-helper.sh build \"$@\"",
     "clean": "rm -rf build",
-    "lint": "node node_modules/eslint/bin/eslint.js --max-warnings=0 --ext .ts --ext .tsx .",
+    "lint": "echo 'CRA already linted this'",
     "start": "../cra-build-helper.sh start \"$@\""
   },
   "browserslist": {
