--- a/demo-client/package.json
+++ b/demo-client/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "bundle": "GENERATE_SOURCEMAP=false ../cra-build-helper.sh build \"$@\"",
     "bundle-dev": "../cra-build-helper.sh build \"$@\"",
-    "clean": "rm -rf build",
+    "clean": "rm -rf build node_modules",
     "lint": "echo 'CRA already linted this'",
     "start": "../cra-build-helper.sh start \"$@\""
   },
