--- a/common/package.json
+++ b/common/package.json
@@ -8,7 +8,7 @@
   "types": "build/src/index.d.ts",
   "version": "0.0.0",
   "scripts": {
-    "clean": "rm -rf build",
+    "clean": "rm -rf build node_modules",
     "lint": "yarn eslint --max-warnings=0 --ext .ts src test",
     "test": "yarn jest --clearCache && jest --config test/jest.config.js \"$@\""
   },
