--- a/settings-ui/package.json
+++ b/settings-ui/package.json
@@ -29,6 +29,7 @@
     "util": "^0.12.5"
   },
   "scripts": {
+    "clean": "rm -rf build node_modules",
     "start": "../cra-build-helper.sh start \"$@\"",
     "bundle": "GENERATE_SOURCEMAP=false ../cra-build-helper.sh build \"$@\"",
     "bundle-dev": "../cra-build-helper.sh build \"$@\"",
