Make the JS stuff build on machines with lots of cores

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "settings-ui"
   ],
   "scripts": {
-    "bundle": "yarn workspaces foreach -p run bundle",
-    "bundle-dev": "yarn workspaces foreach -p run bundle-dev",
+    "bundle": "yarn workspaces foreach run bundle",
+    "bundle-dev": "yarn workspaces foreach run bundle-dev",
     "lint": "yarn workspaces foreach -p run lint",
     "clean": "yarn workspaces foreach -p run clean && rm -rf .yarn/cache .yarn/install-state.gz node_modules",
     "docs": "rm -rf docs/dist && docs/build.sh docs/dist",
