--- a/settings-ui/package.json
+++ b/settings-ui/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.59.3",
     "ts-loader": "^9.4.2",
     "ts-patch": "^2.1.0",
     "typescript": "=4.7.3",
