--- a/demo-client/package.json
+++ b/demo-client/package.json
@@ -5,7 +5,6 @@
   "license": "Custom",
   "private": true,
   "version": "0.0.0",
-  "homepage": ".",
   "scripts": {
     "bundle": "GENERATE_SOURCEMAP=false ../cra-build-helper.sh build \"$@\"",
     "bundle-dev": "../cra-build-helper.sh build \"$@\"",
@@ -35,7 +34,11 @@
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "ts-patch": "^2.1.0",
-    "typescript": "=4.7.3"
+    "typescript": "=4.7.3",
+    "ts-patch": "^2.1.0"
+  },
+  "homepage": ".",
+  "devDependencies": {
+    "sass": "^1.60.0"
   }
 }
