--- a/demo-client/package.json
+++ b/demo-client/package.json
@@ -35,10 +35,11 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "=4.7.3",
-    "ts-patch": "^2.1.0"
+    "ts-patch": "^2.1.0",
+    "react-router-dom": "^6.10.0"
   },
-  "homepage": ".",
   "devDependencies": {
     "sass": "^1.60.0"
-  }
+  },
+  "homepage": "."
 }
